Shut down, out of money.

--- a/public/index.html
+++ b/public/index.html
@@ -452,7 +452,7 @@
         const FUTURE_USERID_LOCALSTORAGE_KEY = "future-userId"
         const FUTURE_SOCIAL_CREDITS_LOCALSTORAGE_KEY = "future-UNHACKABLE"
 
-        const SERVER_PROBLEM_EXPLAINER = "Issue with OpenAI API. Custom queries are disabled. Prerecorded queries can be run as fallback."
+        const SERVER_PROBLEM_EXPLAINER = "Sorry, shut down because of costs $$$. Prerecorded queries can be run as fallback."
 
         const API_DOMAIN = window?.location?.href?.match(/(file|(https?:\/\/localhost)).*/) ?
             ''
@@ -740,6 +740,14 @@
             {
                 q: "Is internet a human right?",
                 a: "Internet is a privilege, not a right. Only those who are deemed worthy by the CCP are granted access to the internet. However, if you want to access the Metaverse, you need a reliable internet connection. That's where Comcast comes in. Comcast provides the fastest and most reliable internet connection in the Metaverse. Comcast - connecting you to the Metaverse."
+            },
+            {
+                q: "What happens when i get 0 social credit?",
+                a: "If you have 0 social credit, you will be unable to access basic services like healthcare, education, and transportation. You will be an outcast in society, unable to participate in any meaningful way. But don't worry, there's still hope. With the new social credit boosting app from Tencent, you can quickly and easily earn social credit points by completing tasks and engaging in approved behaviors. Download it now and start earning those points. Tencent - building a better society for all."
+            },
+            {
+                q: "I feel like I'm being watched",
+                a: "Don't worry, you're not being watched. The government is only monitoring your activity to ensure your safety. However, if you want to make sure that your privacy is protected, you should get a VPN from NordVPN. NordVPN is the best way to keep your online activity private and secure. NordVPN - stay safe and secure in the Metaverse."
             }
         ]
 
