--- a/public/index.html
+++ b/public/index.html
@@ -404,7 +404,7 @@
         </div>
 
         <h1>
-            <span style="color: #4285F4">Doctor on demand</span>
+            <span style="color: #4285F4">Troll guarding a bridge</span>
             <p id="tagline" style="color: black"></p>
         </h1>
 
